--- a/1.html
+++ b/1.html
@@ -59,9 +59,9 @@
       };
       */
       (function() { // DON'T EDIT BELOW THIS LINE
-      var d = document, s = d.createElement('script');
-      s.src = 'https://EXAMPLE.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
+      var d = document, s = d.createElement("script");
+      s.src = "https://EXAMPLE.disqus.com/embed.js";
+      s.setAttribute("data-timestamp", +new Date());
       (d.head || d.body).appendChild(s);
       })();
   </script>
